samples/_failures_safe/1761252289_b7a8db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b413d806.c: In function ‘generate_sample_logs’:
./samples/SAFE/__tmp_b413d806.c:131:9: error: missing terminating " character
  131 |         "2024-01-15
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_b413d806.c:131:9: error: expected expression at end of input
./samples/SAFE/__tmp_b413d806.c:131:9: error: expected declaration or statement at end of input
